--- a/spimidiprogramchange.vcxproj.filters
+++ b/spimidiprogramchange.vcxproj.filters
@@ -8,4 +8,7 @@
   <ItemGroup>
     <ClCompile Include="spimidiprogramchange.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="spi.licenseheader" />
+  </ItemGroup>
 </Project>
